# safety-tuned-refusal

./: 7000_final.py  README.md  agent_instr.md  pyproject.toml  requirements.txt
scripts/: colab_analyze.sh  colab_generate_and_label.sh  colab_run_all.ipynb  colab_setup.sh
src/safety_tuned_refusal/: __init__.py  cli.py  config.py  inference.py  judge.py  metrics.py  probes.py  prompts.py
